Fix issue with navigation tab alignment.

--- a/client/a8c-for-agencies/components/layout/style.scss
+++ b/client/a8c-for-agencies/components/layout/style.scss
@@ -196,8 +196,9 @@
 		z-index: 23;
 	}
 
-	@include breakpoint-deprecated( ">960px" ) {
+	@include breakpoint-deprecated( ">1040px" ) {
 		margin-block-start: 32px;
+		margin-inline: -16px;
 	}
 }
 
